{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 108,
  "lineage": "2d64ad11-e65b-753e-3216-1177629c440a",
  "resources": [
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster_master_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841078805765:security-group/sg-050ec861573275cd8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050ec861573275cd8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "k8s-demo-master-sg",
            "name_prefix": "",
            "owner_id": "841078805765",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-demo-master-sg"
            },
            "tags_all": {
              "Name": "k8s-demo-master-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0198a3b717954f9a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2977723452",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-050ec861573275cd8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_security_group.cluster_master_sg",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "vpc_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e70d7736a613242d",
            "association_id": "eipassoc-03083e0be4d7e0b53",
            "domain": "vpc",
            "id": "eipalloc-0e70d7736a613242d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00c443e0a3e089c10",
            "private_dns": "ip-10-0-15-188.ec2.internal",
            "private_ip": "10.0.15.188",
            "public_dns": "ec2-52-200-240-232.compute-1.amazonaws.com",
            "public_ip": "52.200.240.232",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "k8s-demo-eip"
            },
            "tags_all": {
              "Name": "k8s-demo-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841078805765:internet-gateway/igw-02560d03a27bab916",
            "id": "igw-02560d03a27bab916",
            "owner_id": "841078805765",
            "tags": {
              "Name": "k8s-demo-internet-gateway"
            },
            "tags_all": {
              "Name": "k8s-demo-internet-gateway"
            },
            "vpc_id": "vpc-0198a3b717954f9a2"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e70d7736a613242d",
            "connectivity_type": "public",
            "id": "nat-0ed7fb4876c1a2634",
            "network_interface_id": "eni-00c443e0a3e089c10",
            "private_ip": "10.0.15.188",
            "public_ip": "52.200.240.232",
            "subnet_id": "subnet-0c25b7d9866e253ad",
            "tags": {
              "Name": "k8s-demo-nat-gateway"
            },
            "tags_all": {
              "Name": "k8s-demo-nat-gateway"
            }
          },
          "dependencies": [
            "module.network.aws_eip.vpc_eip",
            "module.network.aws_subnet.public_subnet_1a",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a3836d2c02700dd31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ed7fb4876c1a2634",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a3836d2c02700dd3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.vpc_eip",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.nat",
            "module.network.aws_subnet.public_subnet_1a",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02560d03a27bab916",
            "id": "r-rtb-060e9f5cd0f9901741080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-060e9f5cd0f990174",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.igw_route_table",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841078805765:route-table/rtb-060e9f5cd0f990174",
            "id": "rtb-060e9f5cd0f990174",
            "owner_id": "841078805765",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02560d03a27bab916",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s-demo-public-route"
            },
            "tags_all": {
              "Name": "k8s-demo-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0198a3b717954f9a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841078805765:route-table/rtb-0a3836d2c02700dd3",
            "id": "rtb-0a3836d2c02700dd3",
            "owner_id": "841078805765",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ed7fb4876c1a2634",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s-demo-private-route"
            },
            "tags_all": {
              "Name": "k8s-demo-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0198a3b717954f9a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a244c06c0c6c3d8",
            "route_table_id": "rtb-0a3836d2c02700dd3",
            "subnet_id": "subnet-0bcfc2904313224e2"
          },
          "dependencies": [
            "module.network.aws_route_table.nat",
            "module.network.aws_subnet.private_subnet_1a",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003ef44400cbeaa0f",
            "route_table_id": "rtb-0a3836d2c02700dd3",
            "subnet_id": "subnet-0761dde752d2c925d"
          },
          "dependencies": [
            "module.network.aws_route_table.nat",
            "module.network.aws_subnet.private_subnet_1c",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028604bc389eeeec8",
            "route_table_id": "rtb-060e9f5cd0f990174",
            "subnet_id": "subnet-0c25b7d9866e253ad"
          },
          "dependencies": [
            "module.network.aws_route_table.igw_route_table",
            "module.network.aws_subnet.public_subnet_1a",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b65d517042d68461",
            "route_table_id": "rtb-060e9f5cd0f990174",
            "subnet_id": "subnet-0259723b655314dad"
          },
          "dependencies": [
            "module.network.aws_route_table.igw_route_table",
            "module.network.aws_subnet.public_subnet_1c",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841078805765:subnet/subnet-0bcfc2904313224e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcfc2904313224e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "841078805765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-demo-private-1a",
              "kubernetes.io/cluster/k8s-demo": "shared"
            },
            "tags_all": {
              "Name": "k8s-demo-private-1a",
              "kubernetes.io/cluster/k8s-demo": "shared"
            },
            "vpc_id": "vpc-0198a3b717954f9a2"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841078805765:subnet/subnet-0761dde752d2c925d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0761dde752d2c925d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "841078805765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-demo-private-1c",
              "kubernetes.io/cluster/k8s-demo": "shared"
            },
            "tags_all": {
              "Name": "k8s-demo-private-1c",
              "kubernetes.io/cluster/k8s-demo": "shared"
            },
            "vpc_id": "vpc-0198a3b717954f9a2"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841078805765:subnet/subnet-0c25b7d9866e253ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c25b7d9866e253ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "841078805765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-demo-public-1a",
              "kubernetes.io/cluster/k8s-demo": "shared"
            },
            "tags_all": {
              "Name": "k8s-demo-public-1a",
              "kubernetes.io/cluster/k8s-demo": "shared"
            },
            "vpc_id": "vpc-0198a3b717954f9a2"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841078805765:subnet/subnet-0259723b655314dad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0259723b655314dad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "841078805765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-demo-public-1c",
              "kubernetes.io/cluster/k8s-demo": "shared"
            },
            "tags_all": {
              "Name": "k8s-demo-public-1c",
              "kubernetes.io/cluster/k8s-demo": "shared"
            },
            "vpc_id": "vpc-0198a3b717954f9a2"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cluster_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841078805765:vpc/vpc-0198a3b717954f9a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cba91b94f6658a9a",
            "default_route_table_id": "rtb-03caed8dce14b3d88",
            "default_security_group_id": "sg-0a514fac9e9bd3b11",
            "dhcp_options_id": "dopt-0eefcc86a5c6d4163",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0198a3b717954f9a2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03caed8dce14b3d88",
            "owner_id": "841078805765",
            "tags": {
              "Name": "k8s-demo-vpc"
            },
            "tags_all": {
              "Name": "k8s-demo-vpc"
            }
          }
        }
      ]
    }
  ]
}